[gd_scene load_steps=62 format=3 uid="uid://bdurwr0lwd8oq"]

[ext_resource type="Script" path="res://src/Troops/TroopShooting.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://d11ctvn8fygh8" path="res://assets/models/ybot/TroopModelNew.tscn" id="2"]
[ext_resource type="Script" path="res://src/Troops/PointsTracker.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://nnjjw6vhbk1j" path="res://src/HealthSystem/HealthSystem.tscn" id="6"]
[ext_resource type="Script" path="res://src/Troops/ThrowGrenade.gd" id="8"]
[ext_resource type="Script" path="res://src/Troops/Reloading.gd" id="16"]
[ext_resource type="AudioStream" uid="uid://gaaemekhbnop" path="res://assets/audio/grenade_throw.wav" id="17"]
[ext_resource type="AudioStream" uid="uid://c13d8evfwoeq4" path="res://assets/audio/no_ammo.wav" id="19"]
[ext_resource type="Script" path="res://src/Troops/GranadeLauncher.gd" id="20"]
[ext_resource type="Script" path="res://src/Troops/TroopStateMachine.gd" id="21"]
[ext_resource type="Script" path="res://src/Troops/Melee.gd" id="22"]
[ext_resource type="Script" path="res://src/Troops/Dead.gd" id="23"]
[ext_resource type="Script" path="res://src/Troops/Jump.gd" id="24"]
[ext_resource type="Script" path="res://src/Troops/AI/AIWalk.gd" id="25"]
[ext_resource type="Script" path="res://src/Troops/Roll.gd" id="26"]
[ext_resource type="Script" path="res://src/Troops/Run.gd" id="27"]
[ext_resource type="AudioStream" uid="uid://vcm0vkcp4rn3" path="res://assets/audio/punch.wav" id="28"]
[ext_resource type="AudioStream" uid="uid://rwbqb2af0tmv" path="res://assets/audio/reload.mp3" id="29"]

[sub_resource type="BoxShape3D" id="20"]
size = Vector3(2.0608, 0.537772, 1.2195)

[sub_resource type="CapsuleShape3D" id="1"]
radius = 0.6
height = 2.4

[sub_resource type="Animation" id="82"]
resource_name = "Melee"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Model/MeleeHitBox/CollisionShape3D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StateMachine/Melee")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"impulse"
}]
}

[sub_resource type="Animation" id="83"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.7749, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:shape:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.6]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Model/MeleeHitBox/CollisionShape3D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}

[sub_resource type="Animation" id="84"]
resource_name = "Reload"
length = 4.2
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shooting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(3.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"reload_current_weapon"
}]
}

[sub_resource type="Animation" id="85"]
resource_name = "Roll"
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1.5, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 1.7961, 0), Vector3(0, 0.941721, 0), Vector3(0, 0.941721, 0), Vector3(0, 1.7961, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:shape:height")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 1.5, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [2.4, 0.8, 0.8, 2.4]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("StateMachine/Roll")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"impulse"
}]
}

[sub_resource type="Animation" id="86"]
resource_name = "ThrowGrenade"
length = 2.767
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Shooting/LaunchGrenade")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"launch_granade"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ue2ji"]
_data = {
"Melee": SubResource("82"),
"RESET": SubResource("83"),
"Reload": SubResource("84"),
"Roll": SubResource("85"),
"ThrowGrenade": SubResource("86")
}

[sub_resource type="AnimationNodeAnimation" id="67"]
animation = &"die"

[sub_resource type="AnimationNodeAnimation" id="31"]
animation = &"punch"

[sub_resource type="AnimationNodeAnimation" id="33"]
animation = &"roll"

[sub_resource type="AnimationNodeAnimation" id="68"]
animation = &"sitting"

[sub_resource type="AnimationNodeAnimation" id="72"]
animation = &"grenadethrow"

[sub_resource type="AnimationNodeAnimation" id="73"]
animation = &"reload"

[sub_resource type="AnimationNodeStateMachine" id="74"]
states/grenadethrow/node = SubResource("72")
states/grenadethrow/position = Vector2(540, 128)
states/reload/node = SubResource("73")
states/reload/position = Vector2(223, 149)

[sub_resource type="AnimationNodeAnimation" id="87"]
animation = &"walkright"

[sub_resource type="AnimationNodeAnimation" id="88"]
animation = &"walkbackward"

[sub_resource type="AnimationNodeAnimation" id="89"]
animation = &"walkleft"

[sub_resource type="AnimationNodeAnimation" id="59"]
animation = &"walkforward"

[sub_resource type="AnimationNodeAnimation" id="60"]
animation = &"riflerun"

[sub_resource type="AnimationNodeBlendSpace1D" id="90"]
blend_point_0/node = SubResource("59")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("60")
blend_point_1/pos = 1.0
min_space = 0.0

[sub_resource type="AnimationNodeAnimation" id="62"]
animation = &"rifleaim"

[sub_resource type="AnimationNodeAnimation" id="63"]
animation = &"rifleidle"

[sub_resource type="AnimationNodeBlend2" id="64"]

[sub_resource type="AnimationNodeBlendTree" id="91"]
nodes/Animation/node = SubResource("63")
nodes/Animation/position = Vector2(226.08, 159.84)
"nodes/Animation 2/node" = SubResource("62")
"nodes/Animation 2/position" = Vector2(100, 320)
nodes/aim/node = SubResource("64")
nodes/aim/position = Vector2(380, 200)
nodes/output/position = Vector2(680, 260)
node_connections = [&"output", 0, &"aim", &"aim", 0, &"Animation", &"aim", 1, &"Animation 2"]

[sub_resource type="AnimationNodeBlendSpace2D" id="47"]
resource_local_to_scene = true
blend_point_0/node = SubResource("87")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("88")
blend_point_1/pos = Vector2(0, -1)
blend_point_2/node = SubResource("89")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("90")
blend_point_3/pos = Vector2(0, 1)
blend_point_4/node = SubResource("91")
blend_point_4/pos = Vector2(0, 0)

[sub_resource type="AnimationNodeOneShot" id="50"]
filter_enabled = true
filters = ["Skeleton3D:mixamorig_Head", "Skeleton3D:mixamorig_LeftArm", "Skeleton3D:mixamorig_LeftForeArm", "Skeleton3D:mixamorig_LeftHand", "Skeleton3D:mixamorig_LeftHandIndex1", "Skeleton3D:mixamorig_LeftHandIndex2", "Skeleton3D:mixamorig_LeftHandIndex3", "Skeleton3D:mixamorig_LeftHandMiddle1", "Skeleton3D:mixamorig_LeftHandMiddle2", "Skeleton3D:mixamorig_LeftHandMiddle3", "Skeleton3D:mixamorig_LeftHandPinky1", "Skeleton3D:mixamorig_LeftHandPinky2", "Skeleton3D:mixamorig_LeftHandPinky3", "Skeleton3D:mixamorig_LeftHandRing1", "Skeleton3D:mixamorig_LeftHandRing2", "Skeleton3D:mixamorig_LeftHandRing3", "Skeleton3D:mixamorig_LeftHandThumb1", "Skeleton3D:mixamorig_LeftHandThumb2", "Skeleton3D:mixamorig_LeftHandThumb3", "Skeleton3D:mixamorig_LeftShoulder", "Skeleton3D:mixamorig_Neck", "Skeleton3D:mixamorig_RightArm", "Skeleton3D:mixamorig_RightForeArm", "Skeleton3D:mixamorig_RightHand", "Skeleton3D:mixamorig_RightHandIndex1", "Skeleton3D:mixamorig_RightHandIndex2", "Skeleton3D:mixamorig_RightHandIndex3", "Skeleton3D:mixamorig_RightHandMiddle1", "Skeleton3D:mixamorig_RightHandMiddle2", "Skeleton3D:mixamorig_RightHandMiddle3", "Skeleton3D:mixamorig_RightHandPinky1", "Skeleton3D:mixamorig_RightHandPinky2", "Skeleton3D:mixamorig_RightHandPinky3", "Skeleton3D:mixamorig_RightHandRing1", "Skeleton3D:mixamorig_RightHandRing2", "Skeleton3D:mixamorig_RightHandRing3", "Skeleton3D:mixamorig_RightHandThumb1", "Skeleton3D:mixamorig_RightHandThumb2", "Skeleton3D:mixamorig_RightHandThumb3", "Skeleton3D:mixamorig_RightShoulder", "Skeleton3D:mixamorig_Spine", "Skeleton3D:mixamorig_Spine1", "Skeleton3D:mixamorig_Spine2"]

[sub_resource type="AnimationNodeBlendTree" id="48"]
graph_offset = Vector2(-694.148, 233.236)
nodes/OneShotStateMachine/node = SubResource("74")
nodes/OneShotStateMachine/position = Vector2(-20, 500)
nodes/move/node = SubResource("47")
nodes/move/position = Vector2(-120, 240)
nodes/one_shot/node = SubResource("50")
nodes/one_shot/position = Vector2(120, 160)
node_connections = [&"output", 0, &"one_shot", &"one_shot", 0, &"move", &"one_shot", 1, &"OneShotStateMachine"]

[sub_resource type="AnimationNodeStateMachineTransition" id="51"]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id="52"]

[sub_resource type="AnimationNodeStateMachineTransition" id="53"]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id="54"]

[sub_resource type="AnimationNodeStateMachineTransition" id="69"]

[sub_resource type="AnimationNodeStateMachineTransition" id="70"]

[sub_resource type="AnimationNodeStateMachineTransition" id="71"]

[sub_resource type="AnimationNodeStateMachineTransition" id="79"]

[sub_resource type="AnimationNodeStateMachineTransition" id="80"]

[sub_resource type="AnimationNodeStateMachineTransition" id="81"]

[sub_resource type="AnimationNodeStateMachine" id="45"]
states/die/node = SubResource("67")
states/die/position = Vector2(413, 341)
states/punch/node = SubResource("31")
states/punch/position = Vector2(162, 95)
states/roll/node = SubResource("33")
states/roll/position = Vector2(190, 212)
states/sitting/node = SubResource("68")
states/sitting/position = Vector2(573, 181)
states/walk/node = SubResource("48")
states/walk/position = Vector2(368, 118)
transitions = ["punch", "walk", SubResource("51"), "walk", "punch", SubResource("52"), "roll", "walk", SubResource("53"), "walk", "roll", SubResource("54"), "walk", "die", SubResource("69"), "walk", "sitting", SubResource("70"), "sitting", "walk", SubResource("71"), "roll", "die", SubResource("79"), "sitting", "die", SubResource("80"), "punch", "die", SubResource("81")]
graph_offset = Vector2(-191, 27)

[sub_resource type="AnimationNodeBlendTree" id="92"]
graph_offset = Vector2(1026, 232)
nodes/StateMachine/node = SubResource("45")
nodes/StateMachine/position = Vector2(1280, 360)
nodes/output/position = Vector2(1640, 360)
node_connections = [&"output", 0, &"StateMachine"]

[sub_resource type="AnimationNodeStateMachinePlayback" id="93"]

[sub_resource type="AnimationNodeStateMachinePlayback" id="94"]

[sub_resource type="CapsuleShape3D" id="95"]
radius = 0.6
height = 3.486

[node name="Troop" type="CharacterBody3D" groups=["AI", "Damagable", "Troops"]]
process_mode = 1
collision_layer = 2
collision_mask = 9

[node name="Model" parent="." instance=ExtResource("2")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.0153644, 0)

[node name="Skeleton3d" parent="Model" index="0"]
bones/0/position = Vector3(-0.00134698, 0.975006, -0.00421554)
bones/0/rotation = Quaternion(-0.0634302, -0.0349551, 0.0270999, 0.997006)
bones/1/position = Vector3(1e-08, 0.0992346, -0.0122733)
bones/1/rotation = Quaternion(0.0462836, 0.018665, -0.0161221, 0.998624)
bones/2/position = Vector3(-1.39e-06, 0.116454, -0.0142234)
bones/2/rotation = Quaternion(0.012955, 0.00648821, -0.0060668, 0.999877)
bones/3/position = Vector3(9.1e-07, 0.133602, -0.0162646)
bones/4/position = Vector3(2.5e-07, 0.150325, 0.00792905)
bones/4/rotation = Quaternion(0.0208752, 0.0464419, 0.0151985, 0.998587)
bones/5/position = Vector3(2e-08, 0.103218, 0.0314243)
bones/5/rotation = Quaternion(0.026729, -0.0933868, 0.0189557, 0.995091)
bones/9/position = Vector3(0.0610582, 0.0911042, 0.00705551)
bones/9/rotation = Quaternion(0.0196522, -0.140767, -0.171514, 0.974875)
bones/10/position = Vector3(0.12655, -0.00265934, -0.0260092)
bones/10/rotation = Quaternion(0.0585282, -0.07876, -0.303932, 0.947627)
bones/11/position = Vector3(0.274047, 3.9e-07, 7e-08)
bones/11/rotation = Quaternion(0, -0.622738, 0, 0.78243)
bones/12/position = Vector3(0.276145, 2.9e-07, 2e-07)
bones/12/rotation = Quaternion(-0.875328, 0.0643351, 0.069058, 0.474229)
bones/13/position = Vector3(0.127755, 1.3e-07, 2e-07)
bones/14/position = Vector3(0.0361397, 3e-08, 2e-08)
bones/15/position = Vector3(0.0345976, 1e-08, -2.6e-07)
bones/17/position = Vector3(0.0378881, -0.02167, 0.0300309)
bones/18/position = Vector3(0.0367544, -0.0212201, 0.0212201)
bones/19/position = Vector3(0.0339436, -0.0195974, 0.0195979)
bones/21/position = Vector3(0.122666, -0.00231669, 0.0282206)
bones/22/position = Vector3(0.0389197, 2e-08, 3.9e-07)
bones/23/position = Vector3(0.0341516, 1e-08, -9e-08)
bones/25/position = Vector3(0.12147, 9.895e-05, -0.0221663)
bones/26/position = Vector3(0.0360119, 2e-08, 3.5e-07)
bones/27/position = Vector3(0.0330732, 5e-08, -2.1e-07)
bones/29/position = Vector3(0.109082, -0.00226365, -0.0472582)
bones/30/position = Vector3(0.0413665, 2e-08, 2.7e-07)
bones/31/position = Vector3(0.0259484, 0, -3.6e-07)
bones/33/position = Vector3(-0.061057, 0.0911051, 0.00705563)
bones/34/position = Vector3(-0.12655, -0.00266021, -0.026009)
bones/34/rotation = Quaternion(0.152927, 0.161999, 0.3383, 0.914288)
bones/35/position = Vector3(-0.274047, 3.3e-07, 5e-08)
bones/35/rotation = Quaternion(-3.25519e-07, 0.753744, 3.73357e-07, 0.657168)
bones/36/position = Vector3(-0.276145, 2.3e-07, 1.8e-07)
bones/36/rotation = Quaternion(-0.319036, -0.10794, 0.231882, 0.912577)
bones/37/position = Vector3(-0.127755, 9e-08, 1.8e-07)
bones/38/position = Vector3(-0.0361397, 3e-08, 3e-08)
bones/39/position = Vector3(-0.0345976, 0, -2.6e-07)
bones/41/position = Vector3(-0.0378881, -0.02167, 0.0300309)
bones/42/position = Vector3(-0.0367544, -0.0212201, 0.0212201)
bones/43/position = Vector3(-0.0339436, -0.0195975, 0.0195979)
bones/45/position = Vector3(-0.122666, -0.00231673, 0.0282206)
bones/46/position = Vector3(-0.0389197, 0, 3.8e-07)
bones/47/position = Vector3(-0.0341516, 0, -9e-08)
bones/49/position = Vector3(-0.12147, 9.891e-05, -0.0221663)
bones/50/position = Vector3(-0.0360119, 0, 3.5e-07)
bones/51/position = Vector3(-0.0330732, 4e-08, -2.1e-07)
bones/53/position = Vector3(-0.109082, -0.00226369, -0.0472582)
bones/54/position = Vector3(-0.0413665, 0, 2.6e-07)
bones/55/position = Vector3(-0.0259484, -1e-08, -3.7e-07)
bones/57/position = Vector3(-0.0912445, -0.066564, -0.00055378)
bones/57/rotation = Quaternion(0.0198766, -0.135126, -0.0531465, 0.989202)
bones/58/position = Vector3(-0.0024468, -0.405954, -0.00514528)
bones/58/rotation = Quaternion(0.189946, -0.0731725, -0.0439358, 0.978078)
bones/59/position = Vector3(0.00244669, -0.420479, -0.0206023)
bones/59/rotation = Quaternion(-0.143203, -0.0381711, 0.0680197, 0.986615)
bones/60/position = Vector3(-0.0037336, -0.104922, 0.126407)
bones/60/rotation = Quaternion(-0.0206684, 0, 0, 0.999786)
bones/62/position = Vector3(0.0912445, -0.066564, -0.00055378)
bones/62/rotation = Quaternion(-0.0652634, 0.105491, 0.0339173, 0.991697)
bones/63/position = Vector3(0.0024468, -0.405954, -0.00517041)
bones/63/rotation = Quaternion(0.0891733, 0.0653552, 0.0188711, 0.99369)
bones/64/position = Vector3(-0.0024467, -0.42048, -0.0205764)
bones/64/rotation = Quaternion(0.0527101, 0.00305607, -0.0479171, 0.997455)
bones/65/position = Vector3(0.0037336, -0.104922, 0.126407)
bones/65/rotation = Quaternion(-1e-06, 0, 0, 1)

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="Model/Skeleton3d" index="2"]
transform = Transform3D(-0.896398, -0.356441, 0.263472, 0.322696, -0.117295, 0.939207, -0.303868, 0.926926, 0.220166, -0.12208, 1.16277, 0.23293)
bone_name = "mixamorig_RightHand"
bone_idx = 36

[node name="Weapons" type="Node3D" parent="Model/Skeleton3d/BoneAttachment3D"]
unique_name_in_owner = true
transform = Transform3D(0.0382147, -0.0463692, -0.242672, -0.00885305, 0.245143, -0.0482355, 0.246904, 0.0159666, 0.0358304, -1.77109, -0.873821, -4.14973)

[node name="MeleeHitBox" type="Area3D" parent="Model"]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.885, 0)
collision_layer = 0
collision_mask = 512
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Model/MeleeHitBox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.798786, 1.03381)
shape = SubResource("20")
disabled = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 1.7749, 0)
shape = SubResource("1")

[node name="Shooting" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.78536, 0)
script = ExtResource("1")

[node name="LaunchGrenade" type="Node3D" parent="Shooting"]
script = ExtResource("20")

[node name="Throw" type="AudioStreamPlayer" parent="Shooting/LaunchGrenade"]
stream = ExtResource("17")
volume_db = 6.992
bus = &"Sounds"

[node name="NoAmmo" type="AudioStreamPlayer" parent="Shooting/LaunchGrenade"]
stream = ExtResource("19")
bus = &"Sounds"

[node name="NoAmmo" type="AudioStreamPlayer" parent="Shooting"]
stream = ExtResource("19")
bus = &"Sounds"

[node name="HealthSystem" parent="." instance=ExtResource("6")]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("21")
START_STATE = NodePath("Walk")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("25")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("27")
MAX_SPEED = 9.0

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("24")

[node name="Roll" type="Node" parent="StateMachine"]
script = ExtResource("26")
MAX_SPEED = 0.0

[node name="Melee" type="Node" parent="StateMachine"]
script = ExtResource("22")
MAX_SPEED = 0.0

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("23")
MAX_SPEED = 0.0

[node name="Reload" type="Node" parent="StateMachine"]
script = ExtResource("16")
MAX_SPEED = 3.0

[node name="Reload" type="AudioStreamPlayer" parent="StateMachine/Reload"]
stream = ExtResource("29")
bus = &"Sounds"

[node name="ThrowGrenade" type="Node" parent="StateMachine"]
script = ExtResource("8")
MAX_SPEED = 3.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_default_blend_time = 0.26
libraries = {
"": SubResource("AnimationLibrary_ue2ji")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("92")
anim_player = NodePath("../Model/AnimationPlayer")
active = true
parameters/StateMachine/playback = SubResource("93")
parameters/StateMachine/walk/OneShotStateMachine/playback = SubResource("94")
parameters/StateMachine/walk/move/blend_position = Vector2(0.972, 0.158)
parameters/StateMachine/walk/move/3/blend_position = -0.275479
parameters/StateMachine/walk/move/4/aim/blend_amount = 0.0
parameters/StateMachine/walk/one_shot/active = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("28")
volume_db = 10.0
bus = &"Sounds"

[node name="HurtBox" type="Area3D" parent="." groups=["HurtBox"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.785, 0)
collision_layer = 512
collision_mask = 0
monitoring = false

[node name="CollisionShape2" type="CollisionShape3D" parent="HurtBox"]
shape = SubResource("95")

[node name="Tail" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0146563, 0)

[node name="PointsTracker" type="Node" parent="."]
script = ExtResource("3")

[connection signal="area_entered" from="Model/MeleeHitBox" to="." method="_on_MeleeHitBox_area_entered"]
[connection signal="die" from="HealthSystem" to="." method="_on_HealthSystem_die"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_animation_finished"]

[editable path="Model"]
